@@ -14,6 +14,10 @@ PHP                                                                        NEWS
   . Fix bug #61285, #68329, #68046, #41631: encrypted streams don't observe
     socket timeouts (Brad Broerman)
 
+- pgsql:
+  . Fixed bug #68638 (pg_update() fails to store infinite values).
+    (william dot welter at 4linux dot com dot br, Laruence)
+
 - CGI:
   . Fixed bug #69015 (php-cgi's getopt does not see $argv). (Laruence)
 
